--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.13.0",
     "express": "^4.16.4",
+    "highcharts": "^7.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "webpack": "^4.31.0",
